my first commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,186 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="  https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans:wght@300&family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="media" />
+
+    <title>Tourism</title>
   </head>
-  <body></body>
+  <!-- Home -->
+  <body id="home">
+    <!-- header -->
+    <header class="hero">
+      <div class="navbar">
+        <h1 class="logo"><i class="fas fa-road"></i>Tourism</h1>
+        <nav class="menu">
+          <ul>
+            <a href="featues.html">Features</a>
+            <a href="contact.html">Contact</a>
+            <a href="search.html"><i class="fas fa-search"></i> </a>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="content_container">
+        <div class="content">
+          <h1 class="title">Luxury</h1>
+          <p>
+            Dozens of flights were reportedly cancelled at Beijing's airport,
+            the world's second busiest, and authorities
+          </p>
+          <a href="features.html" class="btn-dark">To Leave</a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="about">
+        <div class="about_container">
+          <div class="readmore">
+            <img class="man_img" src="./img/Man.png" alt="Man" />
+            <div class="about_info">
+              <h2>ABOUT</h2>
+              <p>
+                Li, the Greenpeace activist, said the sandstorm was reminiscent
+                of those witnessed about two decades ago before a large-scale
+                reforestation campaign in northern China helped reduce the
+                number of sandstorms reaching the capital.
+              </p>
+              <a href="readmore.html" class="btn-click">Read More</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="elements">
+        <div class="pointer element_styles">
+          <i id="element_logo" class="fas fa-map-marker-alt"></i>
+          <h2>POINTER</h2>
+          <p>
+            Li said he hoped Beijing’s latest air pollution crisis would also
+            remind the public that while.
+          </p>
+        </div>
+
+        <div class="plane element_styles">
+          <h2>PLANE</h2>
+          <p>
+            Sandstorms have traditionally been a problem for Beijing and for the
+            northern part of China.
+          </p>
+          <i id="element_logo" class="fas fa-plane plane_logo"></i>
+        </div>
+
+        <div class="Map element_styles">
+          <i id="element_logo" class="fas fa-map"></i>
+          <h2>MAP</h2>
+          <p>
+            Last December tens of thousands of smog refugees were forced to flee
+            China’s pollution-stricken.
+          </p>
+        </div>
+      </section>
+
+      <section class="places">
+        <div class="place_images">
+          <img
+            class="place1"
+            src="./img/Ras-al-kaimah.png"
+            alt="ras-al-kaimah"
+          />
+          <img class="place2" src="./img/Dubai.png" alt="Dubai" />
+          <img class="place3" src="./img/abudhabi.png" alt="abudhabi" />
+        </div>
+
+        <div class="place_content">
+          <div class="ras-al-kaimah place_styles">
+            <h2>RAS-AL-KAIMAH</h2>
+            <p>Li said he hoped Beijing’s latest air pollution crisis.</p>
+            <a href="ras-al-kaimah.html" class="btn-click">VIEW</a>
+          </div>
+
+          <div class="dubai place_styles">
+            <h2>DUBAI</h2>
+            <p>Sandstorms have traditionally been a problem for Beijing.</p>
+            <a href="dubai.html" class="btn-click">VIEW</a>
+          </div>
+
+          <div class="abudhabi place_styles">
+            <h2>ABUDHABI</h2>
+            <p>Last December tens of thousands of smog refugees were.</p>
+            <a href="abudhabi.html" class="btn-click">VIEW</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="hotel_section">
+        <h1>HOTELS</h1>
+        <div class="hotels">
+          <div class="hotel1 hotel_styles">
+            <img class="hotel1_img" src="./img/Hotel1.png" alt="" />
+            <h2>NIHI SUMBA</h2>
+            <p>
+              Li said he hoped Beijing’s latest air pollution crisis would also
+              remind the public that while.
+            </p>
+            <h3>$67</h3>
+            <a href="book.html" class="btn-light">BOOK NOW</a>
+          </div>
+
+          <div class="hotel2 hotel_styles">
+            <img class="hotel2_img" src="./img/Hotel2.png" alt="" />
+            <h2>THE BRANDO</h2>
+            <p>
+              Sandstorms have traditionally been a problem for Beijing and for
+              the northern part of China.
+            </p>
+            <h3>$53</h3>
+            <a href="book.html" class="btn-light">BOOK NOW</a>
+          </div>
+
+          <div class="hotel3 hotel_styles">
+            <img class="hotel3_img" src="./img/Hotel3.png" alt="" />
+            <h2>ZARAFA CAMP</h2>
+            <p>
+              Last December tens of thousands of smog refugees were forced to
+              flee China’s pollution-stricken.
+            </p>
+            <h3>$92</h3>
+            <a href="book.html" class="btn-light">BOOK NOW</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="navigate">
+        <a href="#"> <i id="left_arrow" class="fas fa-arrow-left"></i></a>
+        <a href="#"> <i id="right_arrow" class="fas fa-arrow-right"></i></a>
+      </section>
+
+      <section class="footer">
+        <div class="footer_links">
+          <a href="terms.html">Terms</a>
+          <a href="privacy.html">Privacy</a>
+          <a href="help.html">Help</a>
+        </div>
+
+        <div class="footer_content">
+          <h1>Tourism</h1>
+          <p>&copy;2018 Tourism. All rights reserved.</p>
+        </div>
+
+        <div class="footer_logos">
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
